--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical" >
+
+<ListView
+    android:id="@+id/images_grid"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <GridView
-        android:id="@+id/images_grid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnWidth="150dp"
-        android:gravity="center"
-        android:numColumns="2"
-        android:stretchMode="columnWidth" />
-
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    />
+</LinearLayout>
