--- a/app/src/main/res/layout/single_image_delegate.xml
+++ b/app/src/main/res/layout/single_image_delegate.xml
@@ -1,13 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:layout_width="fill_parent"
+android:layout_height="fill_parent" >
 
-    <ImageView
-        android:padding="10dp"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="centerInside"
-        android:id="@+id/single_image" />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:id="@+id/title"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="10dp"
+    android:textColor="#000000"
+    />
+
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:text="One two three four five six seven eight nine ten one two three"
+    android:id="@+id/content"
+    android:layout_below="@+id/title"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="20dp"
+    android:textColor="#000000"
+    />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:text="7 hours ago"
+    android:id="@+id/clue"
+    android:layout_below="@+id/content"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:layout_marginRight="20dp"
+    android:layout_marginEnd="20dp"
+    android:textColor="#000000"
+    />
+
+
 </RelativeLayout>
