--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -13,6 +13,24 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
+        <AutoCompleteTextView
+            android:id="@+id/ac_username"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:padding="15dp"
+            android:hint="user name"
+            android:singleLine="true"
+            android:textColor="@color/gray_800"
+            android:textSize="14sp"
+            android:textCursorDrawable="@null"
+
+            android:background="@drawable/edt_bg"
+            android:drawablePadding="9dp"
+            />
+
         <EditText
             android:id="@+id/et_category"
             android:layout_marginTop="20dp"
